[workspace]
members = [
    "harness",
    "random",
    "simulator",
    "tcp",
    "tcp_client",
    "time",
    "utils",
]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["log"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive"] }
const_format = "0.2.34"
ctrlc = "3.4.6"
env_logger = "0.11"
futures = "0.3"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
getrandom = "0.3.2"
log = { version = "0.4", features = ["release_max_level_trace"] }
paste = "1.0.15"
pretty_env_logger = "0.5"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
rustyline = "15.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2" }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
turmoil = "0.6.6"
