[workspace]
members = [
    "async",
    "async/cargo",
    "async/examples/cancel",
    "async/examples/simulated",
    "async/macros",
    "fs",
    "random",
    "simulator",
    "simulator/harness",
    "simulator/utils",
    "tcp",
    "tcp_client",
    "time",
]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["log"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
btparse = "0.2.0"
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive"] }
color-backtrace = { version = "0.7.0", default-features = false, features = [
    "use-btparse-crate",
] }
const_format = "0.2.34"
ctrlc = "3.4.6"
env_logger = "0.11"
futures = "0.3"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
gag = "1.0.0"
log = { version = "0.4", features = ["release_max_level_trace"] }
oneshot = "0.1.11"
paste = "1.0.15"
pin-project-lite = "0.2.16"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5"
quote = "1.0.40"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
rust_decimal = { version = "1.37.1", default-features = false }
rust_decimal_macros = { version = "1.37.1", default-features = false }
rustyline = "15.0.0"
scoped-tls = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
syn = "2.0.101"
thiserror = "2.0.12"
tokio = { version = "1.44.2" }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
turmoil = "0.6.6"
walkdir = "2.5.0"
