[package]
authors     = ["Braden Steffaniak"]
categories  = ["asynchronous"]
description = "Async runtime package"
edition     = "2024"
keywords    = ["async"]
license     = "MIT"
name        = "dst_demo_async"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_random = { version = "0.1.0", path = "../random", optional = true, default-features = false, features = [
    "rand",
] }

log       = { workspace = true }
thiserror = { workspace = true }

# Simulator
futures = { workspace = true, optional = true }

# Tokio
tokio = { workspace = true, optional = true, features = ["rt"] }
tokio-util       = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["fs", "io", "net", "rt-multi-thread", "simulator", "sync", "tokio"]

fail-on-warnings = []

simulator = ["dep:dst_demo_random", "dep:futures", "dep:tokio"]
tokio     = ["dep:tokio"]

fs              = ["tokio?/fs"]
io              = ["tokio?/io-util"]
net             = ["tokio?/net"]
rt-multi-thread = ["tokio?/rt-multi-thread"]
sync            = ["tokio?/sync"]
time            = ["tokio?/time"]
util            = ["dep:tokio-util"]
