[package]
authors     = ["Braden Steffaniak"]
categories  = ["asynchronous"]
description = "Async runtime package"
edition     = "2024"
keywords    = ["async"]
license     = "MIT"
name        = "dst_demo_async"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_random = { version = "0.1.0", path = "../random", optional = true, default-features = false, features = [
    "rand",
] }
dst_demo_time = { version = "0.1.0", path = "../time", optional = true, default-features = false, features = [
    "std",
] }

log              = { workspace = true }
pin-project-lite = { workspace = true }
thiserror        = { workspace = true }

# Simulator
futures = { workspace = true, optional = true }

# Tokio
tokio      = { workspace = true, optional = true, features = ["rt"] }
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = [
    "fs",
    "io",
    "macros",
    "net",
    "rt-multi-thread",
    "simulator",
    "sync",
    "time",
    "tokio",
    "util",
]

fail-on-warnings = []

simulator = [
    "dep:dst_demo_random",
    "dep:dst_demo_time",
    "dep:futures",
    "dep:tokio",
]
tokio = ["dep:futures", "dep:tokio", "dep:tokio-util"]

fs              = ["tokio?/fs"]
io              = ["tokio?/io-util"]
macros          = ["tokio?/macros"]
net             = ["tokio?/net"]
rt-multi-thread = ["tokio?/rt-multi-thread"]
sync            = ["tokio?/sync"]
time            = ["tokio?/time"]
util            = ["dep:tokio-util"]
