[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-utils", "filesystem"]
description = "Time package"
edition     = "2024"
keywords    = ["time"]
license     = "MIT"
name        = "dst_demo_fs"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_async = { version = "0.1.0", path = "../async", optional = true, default-features = false, features = [
    "io",
    "rt-multi-thread",
    "sync",
] }

bytes = { workspace = true, optional = true }
log   = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt"] }

[features]
default = ["async", "simulator", "std", "sync", "tokio"]

fail-on-warnings = []

simulator = ["dep:bytes", "sync"]
std       = ["sync"]
tokio     = ["async", "dep:tokio", "dst_demo_async/fs", "dst_demo_async/tokio"]

async = ["dep:dst_demo_async", "dst_demo_async/io"]
sync  = []
