[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Simulator Harness package"
edition     = "2024"
keywords    = ["deterministic", "harness", "simulator", "test"]
license     = "MIT"
name        = "dst_demo_simulator_harness"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[package.metadata.cargo-machete]
ignored = ["dst_demo_random", "dst_demo_tcp"]

[dependencies]
dst_demo_random = { version = "0.1.0", path = "../random", optional = true, default-features = false, features = [
    "simulator",
] }
dst_demo_simulator_utils = { version = "0.1.0", path = "../utils", default-features = false }
dst_demo_tcp = { version = "0.1.0", path = "../tcp", optional = true, default-features = false, features = [
    "simulator",
] }

getrandom = { workspace = true }
log       = { workspace = true }
rand      = { version = "=0.8.5" }
turmoil   = { workspace = true }

[features]
default = []

fail-on-warnings = []

random = ["dep:dst_demo_random"]
tcp    = ["dep:dst_demo_tcp"]
