[package]
authors     = ["Braden Steffaniak"]
categories  = ["network-programming"]
description = "HTTP Networking package"
edition     = "2024"
keywords    = ["http", "network", "networking"]
license     = "MIT"
name        = "dst_demo_http"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_simulator_utils = { version = "0.1.0", path = "../utils", optional = true, default-features = false }

reqwest = { workspace = true, optional = true }

futures-util = { workspace = true }

async-trait  = { workspace = true }
bytes        = { workspace = true }
futures-core = { workspace = true, optional = true }
log          = { workspace = true }
paste        = { workspace = true }
serde        = { workspace = true, optional = true }
serde_json   = { workspace = true, optional = true }
strum        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }

[features]
default = ["reqwest", "simulator"]

fail-on-warnings = []

reqwest   = ["dep:reqwest"]
simulator = ["dep:dst_demo_simulator_utils"]

json   = ["dep:serde_json", "reqwest?/json", "serde"]
stream = ["dep:futures-core", "reqwest?/stream"]

serde = ["dep:serde", "dep:serde_json"]
