[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-utils"]
description = "RNG package"
edition     = "2024"
keywords    = ["generator", "number", "random"]
license     = "MIT"
name        = "dst_demo_random"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
log  = { workspace = true }
rand = { version = "=0.8.5", features = ["small_rng"] }

[features]
default = ["rand", "simulator"]

fail-on-warnings = []

rand      = []
simulator = []
