[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Demo Server package"
edition     = "2024"
keywords    = ["example", "server"]
license     = "MIT"
name        = "dst_demo_server"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_async = { version = "0.1.0", path = "../async", default-features = false, features = [
    "io",
    "net",
    "rt-multi-thread",
    "sync",
    "tokio",
] }
dst_demo_fs = { version = "0.1.0", path = "../fs", default-features = false, features = [
    "std",
] }
dst_demo_tcp = { version = "0.1.0", path = "../tcp", default-features = false, features = [
    "tokio",
] }
dst_demo_time = { version = "0.1.0", path = "../time", default-features = false, features = [
    "std",
] }

async-trait         = { workspace = true }
ctrlc               = { workspace = true }
log                 = { workspace = true }
pretty_env_logger   = { workspace = true }
rust_decimal        = { workspace = true, features = ["serde", "std"] }
rust_decimal_macros = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
strum               = { workspace = true, features = ["derive"] }
thiserror           = { workspace = true }
tokio-util          = { workspace = true }

[features]
default = []

fail-on-warnings = []

simulator = []
