[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Demo Server package"
edition     = "2024"
keywords    = ["example", "server"]
license     = "MIT"
name        = "dst_demo_server"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
switchy = { workspace = true, features = [
    "async",
    "async-io",
    "async-macros",
    "async-net",
    "async-rt-multi-thread",
    "async-sync",
    "async-tokio",
    "async-util",
    "fs",
    "fs-std",
    "tcp",
    "tcp-tokio",
    "time",
    "time-std",
] }

async-trait         = { workspace = true }
ctrlc               = { workspace = true }
log                 = { workspace = true }
pretty_env_logger   = { workspace = true }
rust_decimal        = { workspace = true, features = ["serde", "std"] }
rust_decimal_macros = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
strum               = { workspace = true, features = ["derive"] }
thiserror           = { workspace = true }

[features]
default = []

fail-on-warnings = []
