[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Server Simulator package"
edition     = "2024"
keywords    = ["deterministic", "harness", "simulator", "test"]
license     = "MIT"
name        = "dst_demo_server_simulator"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_server = { version = "0.1.0", path = "../server", default-features = false, features = [
    "simulator",
] }
dst_demo_simulator_harness = { version = "0.1.0", path = "harness", default-features = false, features = [
    "async",
    "fs",
    "pretty_env_logger",
    "random",
    "tcp",
    "time",
    "tui",
] }

log          = { workspace = true }
rust_decimal = { workspace = true }
strum        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }
tokio        = { workspace = true }

[features]
default = []

fail-on-warnings = []
