[package]
authors     = ["Braden Steffaniak"]
categories  = ["asynchronous", "development-utils"]
description = "Async macros package"
edition     = "2024"
keywords    = ["async"]
license     = "MIT"
name        = "dst_demo_async_macros"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[lib]
proc-macro = true

[dependencies]
log   = { workspace = true }
quote = { workspace = true }
syn   = { workspace = true }

[features]
default = ["simulator"]

fail-on-warnings = []

simulator = []
