[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools", "network-programming"]
description = "HTTP models package"
edition     = "2024"
keywords    = ["http", "network", "web"]
license     = "MIT"
name        = "dst_demo_http_models"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
reqwest = { workspace = true, optional = true }
serde   = { workspace = true }
strum   = { workspace = true, features = ["derive"] }

[features]
default = ["reqwest"]

fail-on-warnings = []

reqwest = ["dep:reqwest"]
