[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Simulator Harness package"
edition     = "2024"
keywords    = ["deterministic", "harness", "simulator", "test"]
license     = "MIT"
name        = "dst_demo_simulator_harness"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_simulator_utils = { version = "0.1.0", path = "../utils", default-features = false }

dst_demo_fs = { version = "0.1.0", path = "../../fs", optional = true, default-features = false, features = [
    "simulator",
] }
dst_demo_random = { version = "0.1.0", path = "../../random", optional = true, default-features = false, features = [
    "simulator",
] }
dst_demo_tcp = { version = "0.1.0", path = "../../tcp", optional = true, default-features = false, features = [
    "simulator",
] }
dst_demo_time = { version = "0.1.0", path = "../../time", optional = true, default-features = false, features = [
    "simulator",
] }

ctrlc       = { workspace = true }
log         = { workspace = true }
shell-words = { workspace = true }
turmoil     = { workspace = true }

[features]
default = []

fail-on-warnings = []

fs     = ["dep:dst_demo_fs"]
random = ["dep:dst_demo_random"]
tcp    = ["dep:dst_demo_tcp"]
time   = ["dep:dst_demo_time"]
