[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Simulator Harness package"
edition     = "2024"
keywords    = ["deterministic", "harness", "simulator", "test"]
license     = "MIT"
name        = "dst_demo_simulator_harness"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_simulator_utils = { version = "0.1.0", path = "../utils", default-features = false }
switchy = { workspace = true, features = [
    "random",
    "simulator",
    "tcp",
    "time",
] }

btparse         = { workspace = true }
color-backtrace = { workspace = true }
ctrlc           = { workspace = true }
log             = { workspace = true }
scoped-tls      = { workspace = true }
shell-words     = { workspace = true }
thiserror       = { workspace = true }

# TUI
oneshot = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }

# Logging
pretty_env_logger = { workspace = true, optional = true }

[features]
default = ["pretty_env_logger", "tui"]

fail-on-warnings = []

async  = []
fs     = ["switchy/fs"]
random = []
tcp    = []
time   = []
tui    = ["dep:oneshot", "dep:ratatui"]

pretty_env_logger = ["dep:pretty_env_logger"]
