[package]
authors     = ["Braden Steffaniak"]
categories  = ["development-tools::testing", "simulation"]
description = "Simulator Utils package"
edition     = "2024"
keywords    = ["deterministic", "simulator", "test", "utils"]
license     = "MIT"
name        = "dst_demo_simulator_utils"
readme      = "README.md"
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
tokio-util = { workspace = true }

[features]
default = []

fail-on-warnings = []
