[package]
authors     = ["Braden Steffaniak"]
description = "Simulated cancel async runtime usage example"
edition     = "2024"
license     = "MIT"
name        = "async_cancel"
publish     = false
repository  = "https://github.com/BSteffaniak/dst-demo"
version     = "0.1.0"

[dependencies]
dst_demo_async = { version = "0.1.0", path = "../..", default-features = false, features = [
    "time",
    "simulator",
    "util",
] }

ctrlc             = { workspace = true }
pretty_env_logger = { workspace = true }

[features]
default = []

fail-on-warnings = []
